//
// PROJECT:         Aspia
// FILE:            protocol/auth_session.proto
// LICENSE:         GNU Lesser General Public License 2.1
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aspia.proto.auth;

enum SessionType
{
    SESSION_TYPE_UNKNOWN        = 0;
    SESSION_TYPE_DESKTOP_MANAGE = 1;
    SESSION_TYPE_DESKTOP_VIEW   = 2;
    SESSION_TYPE_FILE_TRANSFER  = 4;
    // SESSION_TYPE_SYSTEM_INFO    = 8;
}

enum Status
{
    STATUS_UNKNOWN       = 0;
    STATUS_SUCCESS       = 1;
    STATUS_ACCESS_DENIED = 2;
}

// Host to client.
message Request
{
    uint32 version = 1;
    bytes nonce    = 2;
}

// Client to host.
message Response
{
    SessionType session_type = 1;
    string username = 2;
    bytes key = 3;
}

// Host to client.
message Result
{
    Status status = 1;
}
